--- a/base/deployment.yaml
+++ b/base/deployment.yaml
@@ -1,33 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: the-deployment
+  name: no-deployment
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
-      deployment: hello
+      only_template: hello
   template:
     metadata:
       labels:
-        deployment: hello
+        only_template: hello
     spec:
       containers:
-      - name: the-container
+      - name: no-container
         image: monopole/hello:1
-        command: ["/hello",
-                  "--port=8080",
-                  "--enableRiskyFeature=$(ENABLE_RISKY)"]
+        command: [/bin/bash, -c, 'sleep infinity']
+        # command: ["/hello",
+        #           "--port=8080",
+        #           "--enableRiskyFeature=$(ENABLE_RISKY)"]
         ports:
         - containerPort: 8080
-        env:
-        - name: ALT_GREETING
-          valueFrom:
-            configMapKeyRef:
-              name: the-map
-              key: altGreeting
-        - name: ENABLE_RISKY
-          valueFrom:
-            configMapKeyRef:
-              name: the-map
-              key: enableRisky
+        # env:
+        # - name: ALT_GREETING
+        #   valueFrom:
+        #     configMapKeyRef:
+        #       name: the-map
+        #       key: altGreeting
+        # - name: ENABLE_RISKY
+        #   valueFrom:
+        #     configMapKeyRef:
+        #       name: the-map
+        #       key: enableRisky
