--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -6,9 +6,9 @@ metadata:
 # Example configuration for the webserver
 # at https://github.com/monopole/hello
 commonLabels:
-  app: hello
+  app: no_set
 
 resources:
 - deployment.yaml
 - service.yaml
-- configMap.yaml
+# - configMap.yaml
